--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 			<!-- Opening slide -->
 			<section>
-				<h1>Intro to jQuery <span>👩‍💻</span></h1>
+				<h1>Intro to jQuery <span>👩🏻‍💻</span></h1>
 				<p>
 					<small>
 						<a href="https://github.com/indirap">Indira Pranabudi</a>
@@ -282,7 +282,7 @@
 				</div>
 			</section>
 
-			<!-- Exercise 1-->
+			<!-- Exercise 1 -->
 			<section>
 				<h3>Let's Develop It!</h3>
 				<a href="https://codepen.io/indirap/pen/ZmyyRe" target="_blank"><span>https://codepen.io/indirap/pen/ZmyyRe</span></a>
@@ -337,7 +337,7 @@
 				</section>
 			</section>
 
-			<!-- Exercise 2-->
+			<!-- Exercise 2 -->
 			<section>
 				<h3>Let's Develop It!</h3>
 				<a href="https://codepen.io/indirap/pen/PxjKZP" target="_blank"><span>https://codepen.io/indirap/pen/PxjKZP</span></a>
@@ -446,11 +446,11 @@
       $(this).css('background-color', 'orange')
     }
   });
-          </code></pre>
+		  </code></pre>
 				</div>
 			</section>
 
-			<!-- Exercise-->
+			<!-- Exercise 3 -->
 			<section>
 				<h3>Let's Develop It</h3>
 				<a href="https://codepen.io/indirap/pen/XygaeP" target="_blank"><span>https://codepen.io/indirap/pen/XygaeP</span></a>
@@ -539,14 +539,14 @@
 				</div>
 			</section>
 
-			<!-- Exercise-->
+			<!-- Exercise 4 -->
 			<section>
 				<h3>Let's Develop It</h3>
 				<a href="https://codepen.io/indirap/pen/Oagjop" target="_blank"><span>https://codepen.io/indirap/pen/Oagjop</span></a>
 			</section>
 			<!-- -->
 			<section>
-				<h2>Questions? <span>🙋‍♀️</span></h2>
+				<h2>Questions? <span>🙋🏻‍♀️</span></h2>
 			</section>
 		</div>
 	</div>
